--- a/client/Panel/src/components/ProjectsList/ProjectsList.scss
+++ b/client/Panel/src/components/ProjectsList/ProjectsList.scss
@@ -20,3 +20,21 @@
     flex-direction: column;
   }
 }
+
+
+.loadingWrapper {
+  margin: 0 auto;
+  justify-content: center;
+  display: flex;
+  margin-top: 12px;
+  animation: fadeIn 0.3s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
