--- a/client/Panel/src/components/ProjectsListTabs/ProjectsListTabs.scss
+++ b/client/Panel/src/components/ProjectsListTabs/ProjectsListTabs.scss
@@ -4,4 +4,15 @@
     height: 100% !important;
     align-items: center;
   }
+  animation: fadeIn 0.3s;
+}
+
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
